Use Java 8 Collections.emptyList() instead of List.of().
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/ball-util/trunk@8257 b3e4a033-f9ea-474d-ac63-5dcbede9114a